deploy/tests/e2e/crd-frontend/config/configmap-frontend-http.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: haproxy-kubernetes-ingress
  namespace: haproxy-controller
data:
  cr-frontend-http: default/test-http
  # Mandatory config
  global-config-snippet: |
    stats socket 0.0.0.0:31024
  syslog-server: |
    address: stdout, format: raw, facility:daemon
  maxconn: "1000"
  timeout-client: 50s
  timeout-connect: 5s
  timeout-http-keep-alive: 1m
  timeout-http-request: 5s
  timeout-queue: 5s
  timeout-server: 50s
  timeout-tunnel: 1h
