deploy/tests/e2e/crd-frontend/config/ingress-ssl-passthrough.yaml
kind: Service
apiVersion: v1
metadata:
  name: ssl-passthrough
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app: ssl-passthrough
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ssl-passthrough
  annotations:
    ssl-passthrough: "true"
spec:
  ingressClassName: haproxy
  rules:
    - host: ssl-passthrough.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-passthrough
                port:
                  name: https
